--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,26 +1,47 @@
 body{
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
+  padding: 0;
+  margin-top: 80px;
 }
 
 $h1: 48px;
 $h2: 36px;
 $h3: 24px;
 $p: 18px;
+$marginL: 300px;
 
 .header{
   display: flex;
   justify-content: space-between;
   width: 98%;
   margin: 1% 1%;
-  font-size: $h2;
+  font-size: $h3;
+  position: fixed;
+  top: 0;
+  .logo-text{
+    font-weight: bold;
+  }
   a{
     text-decoration: none;
     color: inherit;
-    text-transform: uppercase;
   }
   .links{
     a{
       margin-left: 2vw;
     }
   }
+}
+
+.text-section{
+  max-width: 900px;
+  font-size: $p;
+  margin-left: $marginL;
+}
+
+.project-title{
+  position: fixed;
+  top: 1vw;
+  left: 300px;
+  font-size: $h3;
 }
