--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -45,3 +45,27 @@ $marginL: 300px;
   left: 300px;
   font-size: $h3;
 }
+
+.images-section{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+  .image{
+    height: 70vh;
+    width: auto;
+    margin: 1vw;
+    &.full-width{
+      width: 100%;
+      height: auto;
+    }
+    &.full-height{
+      width: auto;
+      height: 100%;
+    }
+    img{
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
