--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,7 +2,7 @@ body{
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-  margin-top: 80px;
+  // margin-top: 80px;
 }
 
 $h1: 48px;
@@ -37,6 +37,8 @@ $marginL: 300px;
   max-width: 900px;
   font-size: $p;
   margin-left: $marginL;
+  margin-top: 48px;
+  margin-bottom: 48px;
 }
 
 .project-title{
@@ -54,7 +56,7 @@ $marginL: 300px;
   .image{
     height: 70vh;
     width: auto;
-    margin: 1vw;
+    margin: 2vw 1vw;
     &.full-width{
       width: 100%;
       height: auto;
@@ -62,6 +64,14 @@ $marginL: 300px;
     &.full-height{
       width: auto;
       height: 100%;
+    }
+    &.full-screen{
+      width: 100vw;
+      height: 100vh;
+      margin: 0;
+      img{
+        object-fit: cover;
+      }
     }
     img{
       width: 100%;
