--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,15 +1,16 @@
+@import url("https://use.typekit.net/fzj1sok.css");
+
 body{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "neue-haas-grotesk-text", sans-serif;
   margin: 0;
   padding: 0;
-  // margin-top: 80px;
 }
 
 $h1: 48px;
 $h2: 36px;
 $h3: 24px;
 $p: 18px;
-$marginL: 300px;
+$marginL: 10vw;
 
 .header{
   display: flex;
@@ -19,9 +20,6 @@ $marginL: 300px;
   font-size: $h3;
   position: fixed;
   top: 0;
-  .logo-text{
-    font-weight: bold;
-  }
   a{
     text-decoration: none;
     color: inherit;
@@ -76,6 +74,34 @@ $marginL: 300px;
     img{
       width: 100%;
       height: 100%;
+      object-fit: contain;
+    }
+  }
+  &.columns-1{
+    .image{
+      width: 100%;
+      height: auto;
+    }
+  }
+  
+  &.columns-2{
+    .image{
+      width: 45%;
+      height: auto;
+    }
+  }
+  
+  &.columns-3{
+    .image{
+      width: 30%;
+      height: auto;
+    }
+  }
+  &.columns-4{
+    .image{
+      width: 22%;
+      height: auto;
     }
   }
 }
+
