--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,7 @@
-@import url("https://use.typekit.net/fzj1sok.css");
+@import url("https://use.typekit.net/bte1fue.css");
 
 body{
-  font-family: "neue-haas-grotesk-text", sans-serif;
+  font-family: "neue-haas-grotesk-display", sans-serif;
   margin: 0;
   padding: 0;
 }
