--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -212,3 +212,17 @@ p{
     color: black;
   }
 }
+
+.list{
+  margin-top: 100px;
+  padding: 0 24px;
+  * {
+    font-weight: 500!important;
+  }
+  a{
+    text-decoration: none;
+    color: black;
+    border-bottom: 1px solid black;
+    display: block;
+  }
+}
